--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modal-plugin",
+  "name": "react-essentiel-modal",
   "version": "1.0.0",
   "description": "(React modal plugin)",
   "main": "dist/Modal.js",
