fix syntax error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-essentiel-modal",
+  "name": "react-essential-modal",
   "version": "1.0.0",
   "description": "(React modal plugin)",
   "main": "dist/Modal.js",
